fix overflown-x clip

--- a/client/src/pages/Home/styles.module.css
+++ b/client/src/pages/Home/styles.module.css
@@ -1,3 +1,7 @@
+.searchAndFilterContainer {
+  position: relative;
+  overflow-x: clip;
+}
 @media (min-width: 37.5em) {
   .searchAndFilterContainer {
     max-width: 87rem;
